Fixed under construction animation easter egg

--- a/includes/header.html
+++ b/includes/header.html
@@ -31,4 +31,4 @@
         <h1><a href="/" aria-label="jsramverk.me">jsramverk.me</a></h1>
     </header>
 
-    <main class="container">
+    <main class="container" id="main-container">
