--- a/sass/under-construction.scss
+++ b/sass/under-construction.scss
@@ -41,7 +41,7 @@
 .oh-come-on {
     position: absolute;
     top: 200px;
-    left: 50px;;
+    left: 50px;
     transform: rotate(-45deg);
     font-size: 2.6rem;
     font-family: "Comic Sans MS", cursive, sans-serif;
@@ -49,17 +49,17 @@
     padding: 1.4rem;
     z-index: 10000;
     width: 70%;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0 rgba(0, 0, 0, 0.75);
 }
 
 @keyframes fadein {
     from { opacity: 0; }
-    to   { opacity: 1; }
+    to { opacity: 1; }
 }
 
 @keyframes move-truck {
     from { right: -371px; }
-    to   { right: 1200px; }
+    to { right: 1200px; }
 }
 
 @media (min-width: 992px) {
@@ -70,6 +70,6 @@
 
     @keyframes move-truck {
         from { right: -371px; }
-        to   { right: 2500px; }
+        to { right: 2500px; }
     }
 }
