Changed color of assignment headers

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,5 +1,6 @@
 $minionYellow: #f0db4f;
 $darkCharcoal: #323330;
+$lightCharcoal: lighten($darkCharcoal, 10%);
 $blueGem: #2915a3;
 $royalBlue: #654ff0;
 
