Fixed color scheme

--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background: linear-gradient(45deg, $darkCharcoal, lighten($darkCharcoal, 10%));
+    background-color: $lightCharcoal;
     padding: 2rem;
     color: white;
 
