Added author and updated notes to articles

--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -77,6 +77,11 @@ a {
     display: inline;
 }
 
+.author {
+    color: $lightCharcoal;
+    font-style: italic;
+}
+
 blockquote {
     border-left: 4px solid $minionYellow;
     padding: 2rem;
