--- a/includes/index.html
+++ b/includes/index.html
@@ -85,6 +85,12 @@
         <p>Exempelprogrammen som används i kursen finns i GitHub-repot <a aria-label="" href="https://github.com/emilfolino/jsramverk" target="_blank" rel="noopener">emilfolino/jsramverk</a>.</p>
     </section>
 
+    <section id="literature">
+        <h3><a aria-label="Litteratur" href="#literature">Litteratur</a></h3>
+
+        <p>Kursen är inte hårt kopplat till specifik kurslitteratur. Rekommenderad läsning i denna och alla andra JavaScript kurser är bokserien <a aria-label="You dont know JS" href="https://github.com/getify/You-Dont-Know-JS" target="_blank">You Don't Know JS</a> av Kyle Simpson.</p>
+    </section>
+
     <section id="courseplan">
         <h3><a aria-label="Kursplan" href="#courseplan">Kursplan</a></h3>
 
