added notices about optional reqs and formulated req 6

--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -94,6 +94,11 @@ blockquote p {
     margin-bottom: 0;
 }
 
+.optional {
+    margin-bottom: 0;
+    font-weight: bold;
+}
+
 @media (min-width: 768px) {
     .main-title {
         font-size: 3rem;
