--- a/includes/header.html
+++ b/includes/header.html
@@ -11,6 +11,10 @@
     <link rel="preload" href="Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="Inter-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="Inter-Italic.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preconnect" href="https://yt3.ggpht.com">
+    <link rel="preconnect" href="https://i.ytimg.com">
+    <link rel="dns-prefetch" href="https://yt3.ggpht.com">
+    <link rel="dns-prefetch" href="https://i.ytimg.com">
     <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
     <script src="bundle.js" defer></script>
     <noscript>
