--- a/includes/index.html
+++ b/includes/index.html
@@ -1,6 +1,6 @@
 <h2 class="main-title">Välkommen till jsramverk</h2>
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
-<p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="" href="https://github.com/emilfolino/jsramverk.me">GitHub emilfolino/jsramverk.me</a></p>
+<p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="" href="https://github.com/emilfolino/jsramverk.me" rel="noopener">GitHub emilfolino/jsramverk.me</a></p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <section class="assignments">
@@ -59,7 +59,7 @@
             <h3><a aria-label="Vecka 6: Nosql" href="nosql">6: NoSQL</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi användar en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
+            <p>Vi använder en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
 
             <p><a aria-label="Vecka 6: Nosql" href="nosql">Gå till uppgiften</a></p>
         </div>
@@ -88,7 +88,7 @@
     <section id="literature">
         <h3><a aria-label="Litteratur" href="#literature">Litteratur</a></h3>
 
-        <p>Kursen är inte hårt kopplat till specifik kurslitteratur. Rekommenderad läsning i denna och alla andra JavaScript kurser är bokserien <a aria-label="You dont know JS" href="https://github.com/getify/You-Dont-Know-JS" target="_blank">You Don't Know JS</a> av Kyle Simpson.</p>
+        <p>Kursen är inte hårt kopplat till specifik kurslitteratur. Rekommenderad läsning i denna och alla andra JavaScript kurser är bokserien <a aria-label="You dont know JS" href="https://github.com/getify/You-Dont-Know-JS" target="_blank" rel="noopener">You Don't Know JS</a> av Kyle Simpson.</p>
     </section>
 
     <section id="courseplan">
