--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -94,6 +94,10 @@ blockquote p {
     margin-bottom: 0;
 }
 
+.week img {
+    max-width: 100%;
+}
+
 .optional {
     margin-bottom: 0;
     font-weight: bold;
