--- a/includes/index.html
+++ b/includes/index.html
@@ -1,6 +1,6 @@
 <h2 class="main-title">Välkommen till jsramverk</h2>
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
-<p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="" href="https://github.com/emilfolino/jsramverk.me" rel="noopener">GitHub emilfolino/jsramverk.me</a></p>
+<p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="" href="https://github.com/emilfolino/jsramverk.se" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <section class="assignments">
