--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,7 +3,7 @@
     <footer class="footer" id="footer">
         <div class="inner-footer">
             <p>&copy; <a href="https://emilfolino.se" target="_blank" rel="noopener">Emil Folino</a></p>
-            <p>The source code can be found at <a href="https://github.com/emilfolino/jsramverk.me" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.me</a></p>
+            <p>The source code can be found at <a href="https://github.com/emilfolino/jsramverk.se" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
         </div>
     </footer>
 </body>
