--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -5,9 +5,10 @@ $blueGem: #2915a3;
 
 $shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2);
 
-$mainFont: "Inter", sans-serif;
+$titleFont: Helvetica, sans-serif;
+$bodyFont: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 $codeFont: monospace;
-$mainFontColor: $darkCharcoal;
+$fontColor: $darkCharcoal;
 $alternateFontColor: white;
 
 $mainPFontSize: 1rem;
