Fixed server-side rendering of code highlighting

--- a/base.scss
+++ b/base.scss
@@ -1,11 +1,11 @@
 @import "sass/variables";
-@import "inter-ui/inter.scss";
 @import "sass/typography";
 @import "sass/footer";
 @import "sass/assignments";
 @import "sass/toc";
 @import "sass/embeds";
 @import "sass/code";
+@import "sass/monokai-sublime";
 @import "sass/tables";
 @import "sass/lists";
 @import "sass/under-construction";
