added all headers to links

--- a/sass/toc.scss
+++ b/sass/toc.scss
@@ -1,6 +1,13 @@
 @media (min-width: 992px) {
     .toc ul li {
-        padding: 0.3rem 0;
+        padding: 0.4rem 0 0.1rem 0;
+        font-size: $mainPFontSize * $fontScaleDownFactor;
+        line-height: $tocLineHeight;
+    }
+
+    .toc ul li.small {
+        padding: 0;
+        font-size: $mainPFontSize * $fontScaleWayDownFactor;
     }
 
     .toc ul li a {
@@ -8,9 +15,5 @@
         padding: 0.2rem 1rem;
         text-decoration: none;
         border-right: 3px solid white;
-    }
-
-    .toc ul li a.current {
-        border-right: 3px solid $blueGem;
     }
 }
