--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -17,4 +17,7 @@ $mainH2FontSize: 2.4rem;
 $mainH3FontSize: 2rem;
 $mainH4FontSize: 1.7rem;
 $fontScaleFactor: 1.2;
+$fontScaleDownFactor: 0.9;
+$fontScaleWayDownFactor: 0.7;
 $mainLineHeight: 1.4;
+$tocLineHeight: 1.1;
