added devops kmom

--- a/includes/index.html
+++ b/includes/index.html
@@ -16,22 +16,22 @@
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 2: UX" href="ux">2: UX</a></h3>
+            <h3><a aria-label="Vecka 2: Backend" href="backend">2: Backend</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi bygger vidare på vår me-applikation och tittar på hur användarens upplevelse sätts i fokus.</p>
+            <p>Vi kopplar vår me-applikation till en backend.</p>
 
-            <p><a aria-label="Vecka 2: UX" href="ux">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 2: Backend" href="backend">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 3: Backend" href="backend">3: Backend</a></h3>
+            <h3><a aria-label="Vecka 3: (dev)ops" href="devops">3: (dev)ops</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi skaffar oss en server och driftsätter ett API som vi använder i vår me-applikation.</p>
+            <p>Vi skaffar oss en server och driftsätter vårt API och vår me-applikation.</p>
 
-            <p><a aria-label="Vecka 3: Backend" href="backend">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 3: (dev)ops" href="devops">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
