--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -77,7 +77,8 @@ a {
     font-style: italic;
 }
 
-blockquote {
+blockquote,
+.optional {
     border-left: 4px solid $minionYellow;
     padding: 2rem;
     box-shadow: $shadow;
@@ -94,7 +95,6 @@ blockquote p {
 }
 
 .optional {
-    margin-bottom: 0;
     font-weight: bold;
 }
 
