Fixed first page

--- a/includes/index.html
+++ b/includes/index.html
@@ -85,6 +85,12 @@
         <p>Exempelprogrammen som används i kursen finns i GitHub-repot <a aria-label="" href="https://github.com/emilfolino/jsramverk" target="_blank" rel="noopener">emilfolino/jsramverk</a>.</p>
     </section>
 
+    <section id="chat">
+        <h3><a aria-label="Lärgemenskap" href="#chat">Lärgemenskap</a></h3>
+
+        <p>För att vi ska kunna diskutera och ställa frågor finns i år två chattar: Discord (invite-länk finns på Canvas) och <a aria-label="Gitter" href="https://gitter.im/dbwebb-se/jsramverk" target="_blank" rel="noopener">Gitter</a>.</p>
+    </section>
+
     <section id="literature">
         <h3><a aria-label="Litteratur" href="#literature">Litteratur</a></h3>
 
@@ -99,7 +105,7 @@
 
     <section id="schema">
         <h3><a aria-label="Schema" href="#schema">Schema</a></h3>
-        <p>Schema för kursen finns via <a aria-label="" href="https://cloud.timeedit.net/bth/web/sched1/ri10745QX76Z54Q5Z16g2740y0096Y7Y409gQY5Q5.html" target="_blank" rel="noopener">schema.bth.se</a>.</p>
+        <p>I och med att kursen går helt på distans finns inget schema. Emil <a aria-label="Stream" href="https://dbwebb.se/stream" target="_blank" rel="noopener">streamar</a> genomgång/föreläsning på tisdagar 10-12 under de första sju veckorna av läsperioden. </p>
     </section>
 
     <section id="ladok">
@@ -117,13 +123,13 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Frontend &amp; UX</td>
+                    <td>Frontend &amp; Backend</td>
                     <td>Inlämning 1 á 2.5hp</td>
                     <td>G-U</td>
                     <td>20</td>
                 </tr>
                 <tr>
-                    <td>Backend &amp; Test</td>
+                    <td>dev(ops) &amp; Test</td>
                     <td>Inlämning 2 á 2.5hp</td>
                     <td>G-U</td>
                     <td>20</td>
