--- a/base.scss
+++ b/base.scss
@@ -1,4 +1,7 @@
+@import "sass/normalize";
 @import "sass/variables";
+@import "sass/header";
+@import "sass/container";
 @import "sass/typography";
 @import "sass/footer";
 @import "sass/assignments";
