Started update for 2021

--- a/includes/index.html
+++ b/includes/index.html
@@ -1,4 +1,11 @@
 <h2 class="main-title">Välkommen till jsramverk</h2>
+<blockquote>
+    <h3>Kursen uppdateras</h3>
+    <p>
+        Kursen håller på att göras om inför kurstillfället HT2021. Kursmaterial för 2020 finns på <a href="https://2020.jsramverk.se/">https://2020.jsramverk.se/</a>
+    </p>
+</blockquote>
+
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
 <p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="" href="https://github.com/emilfolino/jsramverk.se" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
 <p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
@@ -26,42 +33,42 @@
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 3: (dev)ops" href="devops">3: (dev)ops</a></h3>
+            <h3><a aria-label="Vecka 3: Auth" href="auth">3: Auth</a></h3>
+        </div>
+        <div class="assignment-body">
+            <p>Vi kopplar på autentisering i frontend och backend.</p>
+
+            <p><a aria-label="Vecka 3: Auth" href="auth">Gå till uppgiften</a></p>
+        </div>
+    </div>
+    <div class="assignment-box">
+        <div class="assignment-header">
+            <h3><a aria-label="Vecka 4: (dev)ops" href="devops">4: (dev)ops</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi skaffar oss en server och driftsätter vårt API och vår me-applikation.</p>
 
-            <p><a aria-label="Vecka 3: (dev)ops" href="devops">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 4: (dev)ops" href="devops">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 4: Test" href="test">4: Test</a></h3>
+            <h3><a aria-label="Vecka 5: Test" href="test">5: Test</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi skapar en testmiljö för våra repon, samt ett flöde för Continouos Integration.</p>
 
-            <p><a aria-label="Vecka 4: Test" href="test">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 5: Test" href="test">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 5: Realtid" href="realtid">5: Realtid</a></h3>
+            <h3><a aria-label="Vecka 6: Sockets" href="sockets">6: Sockets</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
 
-            <p><a aria-label="Vecka 5: Realtid" href="realtid">Gå till uppgiften</a></p>
-        </div>
-    </div>
-    <div class="assignment-box">
-        <div class="assignment-header">
-            <h3><a aria-label="Vecka 6: Nosql" href="nosql">6: NoSQL</a></h3>
-        </div>
-        <div class="assignment-body">
-            <p>Vi använder en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
-
-            <p><a aria-label="Vecka 6: Nosql" href="nosql">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 6: Sockets" href="sockets">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box project">
