--- a/sass/header.scss
+++ b/sass/header.scss
@@ -4,6 +4,7 @@
     background: linear-gradient(45deg, $minionYellow, lighten($minionYellow, 10%));
     box-shadow: $shadow;
     z-index: 1000;
+    box-sizing: border-box;
 }
 
 .header h1 {
