fixed new structure and added graphql page

--- a/includes/index.html
+++ b/includes/index.html
@@ -2,13 +2,13 @@
 <blockquote>
     <h3>Kursen uppdateras</h3>
     <p>
-        Kursen håller på att göras om inför kurstillfället HT2021. Kursmaterial för 2020 finns på <a href="https://2020.jsramverk.se/">https://2020.jsramverk.se/</a>
+        Kursen håller på att göras om inför kurstillfället HT2021. Kursmaterial för 2020 finns på <a aria-label="2020 kurstillfället" href="https://2020.jsramverk.se/">https://2020.jsramverk.se/</a>
     </p>
 </blockquote>
 
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
-<p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="" href="https://github.com/emilfolino/jsramverk.se" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
-<p>Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
+<p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="GitHub" href="https://github.com/emilfolino/jsramverk.se" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
+<p>I kursen bygger vi en egen <em>"real-time collaborative document editor"</em>. Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <section class="assignments">
     <div class="assignment-box">
@@ -33,22 +33,22 @@
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 3: Auth" href="auth">3: Auth</a></h3>
+            <h3><a aria-label="Vecka 3: Sockets" href="sockets">3: Sockets</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi kopplar på autentisering i frontend och backend.</p>
+            <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
 
-            <p><a aria-label="Vecka 3: Auth" href="auth">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 3: Sockets" href="sockets">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 4: (dev)ops" href="devops">4: (dev)ops</a></h3>
+            <h3><a aria-label="Vecka 4: Auth" href="auth">4: Auth</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi skaffar oss en server och driftsätter vårt API och vår me-applikation.</p>
+            <p>Vi kopplar på autentisering i frontend och backend.</p>
 
-            <p><a aria-label="Vecka 4: (dev)ops" href="devops">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 4: Auth" href="auth">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box">
@@ -63,12 +63,12 @@
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3><a aria-label="Vecka 6: Sockets" href="sockets">6: Sockets</a></h3>
+            <h3><a aria-label="Vecka 6: GraphQL" href="graphql">6: GraphQL</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
+            <p>Vi skaffar oss en server och driftsätter vårt API och vår me-applikation.</p>
 
-            <p><a aria-label="Vecka 6: Sockets" href="sockets">Gå till uppgiften</a></p>
+            <p><a aria-label="Vecka 6: GraphQL" href="graphql">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box project">
