updated to new structure

--- a/includes/index.html
+++ b/includes/index.html
@@ -16,7 +16,7 @@
             <h3><a aria-label="Vecka 1: Frontend" href="frontend">1: Frontend</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
+            <p>Vi utvärderar frontend ramverk och skapar ett första utkast till frontenden för vår editor i det JavaScript ramverk du valde.</p>
 
             <p><a aria-label="Vecka 1: Frontend" href="frontend">Gå till uppgiften</a></p>
         </div>
@@ -26,7 +26,7 @@
             <h3><a aria-label="Vecka 2: Backend" href="backend">2: Backend</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi kopplar vår me-applikation till en backend.</p>
+            <p>Vi kopplar en backend med mongodb som databas till frontenden. Dessutom driftsätter vi frontend och backend i Azures moln.</p>
 
             <p><a aria-label="Vecka 2: Backend" href="backend">Gå till uppgiften</a></p>
         </div>
@@ -36,7 +36,7 @@
             <h3><a aria-label="Vecka 3: Sockets" href="sockets">3: Sockets</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
+            <p>Vi tittar på hur vi kan använda websockets för realtids-editering i vår editor.</p>
 
             <p><a aria-label="Vecka 3: Sockets" href="sockets">Gå till uppgiften</a></p>
         </div>
@@ -66,17 +66,17 @@
             <h3><a aria-label="Vecka 6: GraphQL" href="graphql">6: GraphQL</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi skaffar oss en server och driftsätter vårt API och vår me-applikation.</p>
+            <p>Vi tittar på hur vi kan använda GraphQL som ett lager framför vårt REST-API.</p>
 
             <p><a aria-label="Vecka 6: GraphQL" href="graphql">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box project">
         <div class="assignment-header">
-            <h3><a aria-label="Projekt" href="project">Projekt: Trading plattform</a></h3>
+            <h3><a aria-label="Projekt" href="project">Projekt</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Du använder dina kunskaper från tidigare i kursen till att skapa en trading plattform.</p>
+            <p>Du använder dina kunskaper från tidigare i kursen och bygger vidare på din editor med upp till 6 nya features.</p>
 
             <p><a aria-label="Projekt" href="project">Gå till projektet</a></p>
         </div>
@@ -95,7 +95,7 @@
     <section id="chat">
         <h3><a aria-label="Lärgemenskap" href="#chat">Lärgemenskap</a></h3>
 
-        <p>För att vi ska kunna diskutera och ställa frågor finns i år två chattar: Discord (invite-länk finns på Canvas) och <a aria-label="Gitter" href="https://gitter.im/dbwebb-se/jsramverk" target="_blank" rel="noopener">Gitter</a>.</p>
+        <p>För att vi ska kunna diskutera och ställa frågor finns i år: Discord (invite-länk finns på Canvas).</p>
     </section>
 
     <section id="literature">
@@ -112,7 +112,7 @@
 
     <section id="schema">
         <h3><a aria-label="Schema" href="#schema">Schema</a></h3>
-        <p>I och med att kursen går helt på distans finns inget schema. Emil <a aria-label="Stream" href="https://dbwebb.se/stream" target="_blank" rel="noopener">streamar</a> genomgång/föreläsning på tisdagar 10-12 under de första sju veckorna av läsperioden. </p>
+        <p><a href="https://cloud.timeedit.net/bth/web/sched1/riq67Q01755Z69Qy7Q70Z9666ZZ200Y4QY53Y5gQ50ogq67XoQ.html" target="_blank" aria-label="Schema" rel="noopener">Kursens schema</a> beskriver de aktiviteter vi har i kursen. Föreläsningarna på tisdagarna kommer användas för genomgång av tekniker och diskussioner av för- och nackdelar. Förhoppningen är att campus-studenterna kan ha föreläsningar på campus, men vi följer rådande covid-restriktioner.</p>
     </section>
 
     <section id="ladok">
@@ -136,13 +136,13 @@
                     <td>20</td>
                 </tr>
                 <tr>
-                    <td>dev(ops) &amp; Test</td>
+                    <td>Sockets &amp; Auth</td>
                     <td>Inlämning 2 á 2.5hp</td>
                     <td>G-U</td>
                     <td>20</td>
                 </tr>
                 <tr>
-                    <td>Realtid, NoSQL &amp; Projektet</td>
+                    <td>Test, GraphQL &amp; Projektet</td>
                     <td>Inlämning 3 á 2.5hp</td>
                     <td>A-F</td>
                     <td>20-60</td>
