updated to new structure

--- a/includes/index.html
+++ b/includes/index.html
@@ -76,7 +76,7 @@
             <h3><a aria-label="Projekt" href="project">Projekt</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Du använder dina kunskaper från tidigare i kursen och bygger vidare på din editor med upp till 6 nya features.</p>
+            <p>Du använder dina kunskaper från tidigare i kursen och införskaffar ny kunskap genom att bygga vidare på din editor med upp till 6 nya features.</p>
 
             <p><a aria-label="Projekt" href="project">Gå till projektet</a></p>
         </div>
