--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -16,6 +16,7 @@ $mainH1FontSize: 3rem;
 $mainH2FontSize: 2.4rem;
 $mainH3FontSize: 2rem;
 $mainH4FontSize: 1.7rem;
+$mainH5FontSize: 1.5rem;
 $fontScaleFactor: 1.1;
 $fontScaleDownFactor: 0.9;
 $fontScaleWayDownFactor: 0.7;
