Finished projekt description

--- a/includes/index.html
+++ b/includes/index.html
@@ -73,12 +73,12 @@
     </div>
     <div class="assignment-box project">
         <div class="assignment-header">
-            <h3><a aria-label="Projekt" href="project">Projekt</a></h3>
+            <h3><a aria-label="Projekt" href="projekt">Projekt</a></h3>
         </div>
         <div class="assignment-body">
             <p>Du använder dina kunskaper från tidigare i kursen och införskaffar ny kunskap genom att bygga vidare på din editor med upp till 6 nya features.</p>
 
-            <p><a aria-label="Projekt" href="project">Gå till projektet</a></p>
+            <p><a aria-label="Projekt" href="projekt">Gå till projektet</a></p>
         </div>
     </div>
 </section>
