Removed stop signs and moved old material to the bottom

--- a/includes/index.html
+++ b/includes/index.html
@@ -1,10 +1,4 @@
 <h2 class="main-title">Välkommen till jsramverk</h2>
-<blockquote>
-    <h3>Kursen uppdateras</h3>
-    <p>
-        Kursen håller på att göras om inför kurstillfället HT2021. Kursmaterial för 2020 finns på <a aria-label="2020 kurstillfället" href="https://2020.jsramverk.se/">https://2020.jsramverk.se/</a>
-    </p>
-</blockquote>
 
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
 <p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="GitHub" href="https://github.com/emilfolino/jsramverk.se" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
@@ -192,5 +186,11 @@
             ut via Canvas och mail. Jag är som kursansvarig oerhört tacksam om du vill ta 3-5 minuter
             att svara på kursvärderingen.
         </p>
+    </section>
+
+    <section id="previous">
+        <h3><a aria-label="Tidigare år" href="#previous">Tidigare år</a></h3>
+        <p><a href="https://2020.jsramverk.se">Kursmaterial 2020</a></p>
+        <p><a href="https://2019.jsramverk.se">Kursmaterial 2019</a></p>
     </section>
 </section>
