Moved test and auth to correct places in table

--- a/includes/index.html
+++ b/includes/index.html
@@ -130,13 +130,13 @@
                     <td>20</td>
                 </tr>
                 <tr>
-                    <td>Sockets &amp; Auth</td>
+                    <td>Test &amp; Sockets</td>
                     <td>Inlämning 2 á 2.5hp</td>
                     <td>G-U</td>
                     <td>20</td>
                 </tr>
                 <tr>
-                    <td>Test, GraphQL &amp; Projektet</td>
+                    <td>Auth, GraphQL &amp; Projektet</td>
                     <td>Inlämning 3 á 2.5hp</td>
                     <td>A-F</td>
                     <td>20-60</td>
