Reworked front page

--- a/includes/index.html
+++ b/includes/index.html
@@ -2,7 +2,7 @@
 
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
 <p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="GitHub" href="https://github.com/emilfolino/jsramverk.se" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
-<p>I kursen bygger vi en egen <em>"real-time collaborative document editor"</em>. Nedan finns inlämningsuppgifterna tillsammans med material om de tekniker och verktyg som används i kursen.</p>
+<p>I kursen bygger vi en egen <em>"real-time collaborative document editor"</em>. Nedan finns inlämningsuppgifter tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <section class="assignments">
     <div class="assignment-box">
@@ -80,6 +80,18 @@
 <section class="general-information" id="general-information">
     <h2><a aria-label="Generell information" href="#general-information">Generell information</a></h2>
 
+    <section id="path">
+        <h3><a aria-label="Path of Least Resistance" href="#path">Path of Least Resistance</a></h3>
+
+        <p>Kursen är på många sätt upplagd för att skapa förutsättningar för ett eget lärande och utforskande kring JavaScript ramverk. Tidigare år har det dock uttryckts från studenter att de har saknat möjligheten till diskussion när studenter har valt olika ramverk.</p>
+
+        <p>I år har jag valt att implementera en "path of least resistance". Det innebär att alla exempel är skriven i samma ramverk och att jag som kursansvarig har gjort vissa val som underlättar.</p>
+
+        <p>Håll utkik efter följande symbol då vet du att materialet är kopplat till "path of least resistance".</p>
+
+        <img src="path.png" class="path" alt="road used as indicator for path of least resistance track" />
+    </section>
+
     <section id="repo">
         <h3><a aria-label="Exempelprogram" href="#repo">Exempelprogram</a></h3>
 
@@ -89,7 +101,7 @@
     <section id="chat">
         <h3><a aria-label="Lärgemenskap" href="#chat">Lärgemenskap</a></h3>
 
-        <p>För att vi ska kunna diskutera och ställa frågor finns i år: Discord (invite-länk finns på Canvas).</p>
+        <p>För att vi ska kunna diskutera och ställa frågor finns en kanal i Discord (invite-länk finns på Canvas).</p>
     </section>
 
     <section id="literature">
@@ -106,7 +118,7 @@
 
     <section id="schema">
         <h3><a aria-label="Schema" href="#schema">Schema</a></h3>
-        <p><a href="https://cloud.timeedit.net/bth/web/sched1/riq67Q01755Z69Qy7Q70Z9666ZZ200Y4QY53Y5gQ50ogq67XoQ.html" target="_blank" aria-label="Schema" rel="noopener">Kursens schema</a> beskriver de aktiviteter vi har i kursen. Föreläsningarna på tisdagarna kommer användas för genomgång av tekniker och diskussioner av för- och nackdelar. Förhoppningen är att campus-studenterna kan ha föreläsningar på campus, men vi följer rådande covid-restriktioner.</p>
+        <p><a href="https://cloud.timeedit.net/bth/web/sched1/riq67Q01755Z69Qy7Q70Z9666ZZ200Y4QY53Y5gQ50ogq67XoQ.html" target="_blank" aria-label="Schema" rel="noopener">Kursens schema</a> beskriver de aktiviteter vi har i kursen. Föreläsningarna på tisdagarna kommer användas för genomgång av tekniker och diskussioner av för- och nackdelar.</p>
     </section>
 
     <section id="ladok">
