--- a/includes/index.html
+++ b/includes/index.html
@@ -87,9 +87,7 @@
 
         <p>I år har jag valt att implementera en "path of least resistance". Det innebär att alla exempel är skriven i samma ramverk och att jag som kursansvarig har gjort vissa val som underlättar.</p>
 
-        <p>Håll utkik efter följande symbol då vet du att materialet är kopplat till "path of least resistance".</p>
-
-        <img src="path.png" class="path" alt="road used as indicator for path of least resistance track" />
+        <p>För varje kursmoment finns en rubrik "Path of Least Resistance" där valen beskrivs för  kursmomentet.</p>
     </section>
 
     <section id="repo">
