--- a/includes/index.html
+++ b/includes/index.html
@@ -94,6 +94,8 @@
         <h3><a aria-label="Exempelprogram" href="#repo">Exempelprogram</a></h3>
 
         <p>Exempelprogrammen som används i kursen finns i GitHub-repot <a aria-label="" href="https://github.com/emilfolino/jsramverk" target="_blank" rel="noopener">emilfolino/jsramverk</a>.</p>
+
+        <p>För kursmomenten Backend, Test och Auth finns repot <a aria-label="" href="https://github.com/emilfolino/auth_mongo" target="_blank" rel="noopener">emilfolino/auth_mongo</a>. Detta är ett fullständigt exempel för backend koden vi skriver i denna kurs.</p>
     </section>
 
     <section id="chat">
