--- a/sass/assignments.scss
+++ b/sass/assignments.scss
@@ -75,7 +75,11 @@ body {
 
 @media (min-width: 992px) {
     .assignment-box {
-        width: 30%;
+        width: 33%;
         height: 20rem;
+    }
+
+    .span-2 {
+        width: 63%;
     }
 }
