--- a/includes/index.html
+++ b/includes/index.html
@@ -1,7 +1,7 @@
 <h2 class="main-title">Välkommen till jsramverk</h2>
 
 <p>Detta är kursen DV1612 JavaScript-baserade webbramverk. Vi ska i denna kurs använda oss av JavaScript ramverk både på frontend och backend för att skapa användarvänliga webbplatser.</p>
-<p>Kursen ges till webbprogrammeringsstudenter vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener"></a>Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="GitHub" href="https://github.com/emilfolino/jsramverk.se" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
+<p>Kursen ges till <a aria-label="dbwebb.se" href="https://dbwebb.se" target="_blank" rel="noopener">webbprogrammeringsstudenter</a> vid <a aria-label="Blekinge Tekniska Högskola" href="https://bth.se" target="_blank" rel="noopener">Blekinge Tekniska Högskola</a>. Och är en av Sveriges enda högskolekurser i JavaScript ramverk. Källkoden till denna webbplats finns på <a aria-label="GitHub" href="https://github.com/emilfolino/jsramverk.se" target="_blank" rel="noopener">GitHub emilfolino/jsramverk.se</a></p>
 <p>I kursen bygger vi en egen <em>"real-time collaborative document editor"</em>. Nedan finns inlämningsuppgifter tillsammans med material om de tekniker och verktyg som används i kursen.</p>
 
 <section class="assignments">
@@ -15,7 +15,7 @@
             <p><a aria-label="Vecka 1: Frontend" href="frontend">Gå till uppgiften</a></p>
         </div>
     </div>
-    <div class="assignment-box">
+    <div class="assignment-box span-2">
         <div class="assignment-header">
             <h3><a aria-label="Vecka 2: Backend" href="backend">2: Backend</a></h3>
         </div>
@@ -23,46 +23,6 @@
             <p>Vi kopplar en backend med mongodb som databas till frontenden. Dessutom driftsätter vi frontend och backend i Azures moln.</p>
 
             <p><a aria-label="Vecka 2: Backend" href="backend">Gå till uppgiften</a></p>
-        </div>
-    </div>
-    <div class="assignment-box">
-        <div class="assignment-header">
-            <h3><a aria-label="Vecka 3: Test" href="test">3: Test</a></h3>
-        </div>
-        <div class="assignment-body">
-            <p>Vi skapar en testmiljö för våra repon, samt ett flöde för Continouos Integration.</p>
-
-            <p><a aria-label="Vecka 3: Test" href="test">Gå till uppgiften</a></p>
-        </div>
-    </div>
-    <div class="assignment-box">
-        <div class="assignment-header">
-            <h3><a aria-label="Vecka 4: Sockets" href="sockets">4: Sockets</a></h3>
-        </div>
-        <div class="assignment-body">
-            <p>Vi tittar på hur vi kan använda websockets för realtids-editering i vår editor.</p>
-
-            <p><a aria-label="Vecka 4: Sockets" href="sockets">Gå till uppgiften</a></p>
-        </div>
-    </div>
-    <div class="assignment-box">
-        <div class="assignment-header">
-            <h3><a aria-label="Vecka 5: Auth" href="auth">5: Auth</a></h3>
-        </div>
-        <div class="assignment-body">
-            <p>Vi kopplar på autentisering i frontend och backend.</p>
-
-            <p><a aria-label="Vecka 5: Auth" href="auth">Gå till uppgiften</a></p>
-        </div>
-    </div>
-    <div class="assignment-box">
-        <div class="assignment-header">
-            <h3><a aria-label="Vecka 6: GraphQL" href="graphql">6: GraphQL</a></h3>
-        </div>
-        <div class="assignment-body">
-            <p>Vi tittar på hur vi kan använda GraphQL som ett lager framför vårt REST-API.</p>
-
-            <p><a aria-label="Vecka 6: GraphQL" href="graphql">Gå till uppgiften</a></p>
         </div>
     </div>
     <div class="assignment-box project">
@@ -79,16 +39,6 @@
 
 <section class="general-information" id="general-information">
     <h2><a aria-label="Generell information" href="#general-information">Generell information</a></h2>
-
-    <section id="path">
-        <h3><a aria-label="Path of Least Resistance" href="#path">Path of Least Resistance</a></h3>
-
-        <p>Kursen är på många sätt upplagd för att skapa förutsättningar för ett eget lärande och utforskande kring JavaScript ramverk. Tidigare år har det dock uttryckts från studenter att de har saknat möjligheten till diskussion när studenter har valt olika ramverk.</p>
-
-        <p>I år har jag valt att implementera en "path of least resistance". Det innebär att alla exempel är skriven i samma ramverk och att jag som kursansvarig har gjort vissa val som underlättar.</p>
-
-        <p>För varje kursmoment finns en rubrik "Path of Least Resistance" där valen beskrivs för  kursmomentet.</p>
-    </section>
 
     <section id="repo">
         <h3><a aria-label="Exempelprogram" href="#repo">Exempelprogram</a></h3>
@@ -113,12 +63,12 @@
     <section id="courseplan">
         <h3><a aria-label="Kursplan" href="#courseplan">Kursplan</a></h3>
 
-        <p>Kursplanen hittas genom att söka på <a aria-label="" href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612" target="_blank" rel="noopener">DV1612</a> via BTH's webbplats.</p>
+        <p>Kursplanen hittas genom att söka på <a aria-label="" href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1677" target="_blank" rel="noopener">DV1677</a> via BTH's webbplats.</p>
     </section>
 
     <section id="schema">
         <h3><a aria-label="Schema" href="#schema">Schema</a></h3>
-        <p><a href="https://cloud.timeedit.net/bth/web/sched1/riq61QY76Z6Z70Qy567Q85Q663ZX4073YY6365gQ70o97w6XZ7QYqo.html" target="_blank" aria-label="Schema" rel="noopener">Kursens schema</a> beskriver de aktiviteter vi har i kursen. Föreläsningarna på tisdagarna kommer användas för genomgång av tekniker och diskussioner av för- och nackdelar.</p>
+        <p><a href="" target="_blank" aria-label="Schema" rel="noopener">Kursens schema</a> beskriver de aktiviteter vi har i kursen. Föreläsningarna på tisdagarna kommer användas för genomgång av tekniker och diskussioner av för- och nackdelar.</p>
     </section>
 
     <section id="ladok">
@@ -136,20 +86,20 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Frontend &amp; Backend</td>
-                    <td>Inlämning 1 á 2.5hp</td>
+                    <td>Specifikation</td>
+                    <td>Inlämningsuppgift 1 á 1hp</td>
                     <td>G-U</td>
-                    <td>20</td>
+                    <td>15</td>
                 </tr>
                 <tr>
-                    <td>Test &amp; Sockets</td>
-                    <td>Inlämning 2 á 2.5hp</td>
+                    <td>Grunden</td>
+                    <td>Inlämningsuppgift 2 á 2hp</td>
                     <td>G-U</td>
-                    <td>20</td>
+                    <td>25</td>
                 </tr>
                 <tr>
-                    <td>Auth, GraphQL &amp; Projektet</td>
-                    <td>Inlämning 3 á 2.5hp</td>
+                    <td>Projekt</td>
+                    <td>Projektuppgift á 4,5hp</td>
                     <td>A-F</td>
                     <td>20-60</td>
                 </tr>
@@ -202,7 +152,14 @@
 
     <section id="previous">
         <h3><a aria-label="Tidigare år" href="#previous">Tidigare år</a></h3>
-        <p><a href="https://2020.jsramverk.se">Kursmaterial 2020</a></p>
-        <p><a href="https://2019.jsramverk.se">Kursmaterial 2019</a></p>
+        <p><a aria-label="2022" href="https://2022.jsramverk.se">Kursmaterial 2022</a></p>
+        <p><a aria-label="2020" href="https://2020.jsramverk.se">Kursmaterial 2020</a></p>
+        <p><a aria-label="2019" href="https://2019.jsramverk.se">Kursmaterial 2019</a></p>
+    </section>
+
+    <section id="green">
+        <h3><a aria-label="Hållbarhet" href="#green">Hållbarhet</a></h3>
+        <div id="wcb" class="carbonbadge"></div>
+    <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
     </section>
 </section>
